--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,17 @@
 # Server Configuration
 PORT=4000
+NODE_ENV=production
+
+# MongoDB Connection
+MONGODB_URI=mongodb+srv://thuraindev:712127@thuraindev.ulnnx.mongodb.net/?retryWrites=true&w=majority&appName=ThurainDev
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-here-change-in-production
+
+# Frontend URL (for CORS) - Use your droplet's IP
+FRONTEND_URL=http://188.166.239.230:5173
+ALLOWED_ORIGINS=http://188.166.239.230:5173,http://188.166.239.230:3000,http://188.166.239.230
+
+# Cookie Settings
+COOKIE_SECRET=your-cookie-secret-key-here
+COOKIE_DOMAIN=188.166.239.230
