--- a/backend/.env
+++ b/backend/.env
@@ -8,10 +8,10 @@ MONGODB_URI=mongodb+srv://thuraindev:712127@thuraindev.ulnnx.mongodb.net/?retryW
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here-change-in-production
 
-# Frontend URL (for CORS) - Use your droplet's IP
-FRONTEND_URL=http://188.166.239.230:5173
-ALLOWED_ORIGINS=http://188.166.239.230:5173,http://188.166.239.230:3000,http://188.166.239.230
+# Frontend URL (for CORS) - Use your domain
+FRONTEND_URL=https://www.thecity-media-schedule.site
+ALLOWED_ORIGINS=https://www.thecity-media-schedule.site,http://www.thecity-media-schedule.site
 
 # Cookie Settings
 COOKIE_SECRET=your-cookie-secret-key-here
-COOKIE_DOMAIN=188.166.239.230
+COOKIE_DOMAIN=www.thecity-media-schedule.site
